vmTestbase/runtime/pcl/* get SEGV in MetadataOnStackClosure::do_metadata(Metadata*)+0x0

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 13
    • Affects Version/s: 13
    • Component/s: hotspot
    • b22

      Tests failed with
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # SIGSEGV (0xb) at pc=0x00007feb70bb6140, pid=32200, tid=32209
      #
      # JRE version: Java(TM) SE Runtime Environment (13.0) (build 13-internal+0-2019-05-05-2029021.leonid.mesnik.jdk)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (13-internal+0-2019-05-05-2029021.leonid.mesnik.jdk, compiled mode, sharing, tiered, compressed oops, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0xb13140] MetadataOnStackClosure::do_metadata(Metadata*)+0x0
      #
      # Core dump will be written. Default location: /scratch/opt/mach5/mesos/work_dir/slaves/df27b84d-b5c1-4760-9e48-df95fd33274c-S106/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/750923e2-4490-4be6-a3d9-6465a4337f6c/runs/297ddcf6-93d0-48a5-8c8a-5a3eaa7ad595/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_vmTestbase_vm_parallel_class_loading/scratch/1/core.32200
      #
      # If you would like to submit a bug report, please visit:
      # http://bugreport.java.com/bugreport/crash.jsp
      #

            Assignee:
            Coleen Phillimore
            Reporter:
            Leonid Mesnik
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: