8223585: vmTestbase/runtime/pcl/* get SEGV in MetadataOnStackClosure::do_metadata(Metadata*)+0x0

Adjust old method table by only one thread.

Reviewed-by: kvn, jcbeyler, sspitsyn